# matplotlibwidget

./: README.md  pyproject.toml  setup.py
matplotlibwidget/: __init__.py  matplotlibwidget.py  matplotlibwidget_qtplugin.py
